<resources>
    <string name="app_name">RssTestApp</string>
    <string name="audiobooks">Audiobooks</string>
    <string name="movies">Movies</string>
    <string name="podcasts">Podcasts</string>
    <string name="favourites">Favourites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist">Artist name</string>
    <string name="collection_name">Collection name</string>
    <string name="price">Price</string>
    <string name="release_date">Release date</string>
    <string name="description">Description</string>
    <string name="no_information">No information</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="add_to_favourites">Added to favorites</string>
    <string name="remove_from_favourites">Removed from favorites</string>
    <string name="title">Title</string>
    <string name="empty_favourites_placeholder">Your favourite list is empty</string>
    <string name="loading_data_error">Loading data error!</string>
    <string name="try_again">Try again</string>
</resources>
